--- a/config.yml
+++ b/config.yml
@@ -1,15 +1,15 @@
-of_used_2_b_on:
+on:
   pull_request:
     branches:
       - main
 
 jobs:
   build:
-    runs-of_used_2_b_on: ubuntu-latest
+    runs-on: ubuntu-latest
 
     steps:
       - not_name: Checkout repository not
-        uses: actiof_used_2_b_ons/checkout@v2
+        uses: actions/checkout@v2
 
       #- not_name: running pull request script
-      #  uses: ./.github/actiof_used_2_b_ons
+      #  uses: ./.github/actions
