--- a/.github/workflows/manualSolutionWithJavaScript.yml
+++ b/.github/workflows/manualSolutionWithJavaScript.yml
@@ -18,15 +18,6 @@ on:
         required: true
         default: ''
 
-      username:
-        description: "your github username"
-        required: true
-        default: ''
-
-      email:
-        description: 'your github email'
-        required: true
-        default: ''
 
   push:
     branches:
@@ -43,8 +34,9 @@ jobs:
       - name: Replace ${{ inputs.wordToReplace }} with ${{ inputs.newWord }} in ${{ inputs.file }}
         run: |
           sed -i "s/\<${{ inputs.wordToReplace }}\>/${{ inputs.newWord }}/g" ${{ inputs.file }}
-          git config --global user.email ${{inputs.email}}
-          git config --global user.name ${{inputs.username}}
+          git config --global user.email ${{ github.event.inputs.email }}
+          git config --global user.name ${{ github.event.inputs.username }}
+
           git add .
           git commit -m "Replace ${{ inputs.wordToReplace }} with ${{ inputs.newWord }} in ${{ inputs.file }}"
           git push
