--- a/.github/workflows/manualSolutionWithJavaScript.yml
+++ b/.github/workflows/manualSolutionWithJavaScript.yml
@@ -9,7 +9,7 @@ on:
         default: ''
 
       wordToReplace:
-        description: 'what word do you want to replace'
+        description: 'List of words you want to replace (comma-separated)'
         required: true
         default: ''
 
@@ -42,5 +42,13 @@ jobs:
 
       - name: Replace ${{ inputs.wordToReplace }} with ${{ inputs.newWord }} in ${{ inputs.file }}
         run: |
-          node index.js ${{ github.event.inputs.file }} ${{ github.event.inputs.wordToReplace }} ${{ github.event.inputs.newWord }} ${{ github.event.inputs.username }} ${{ github.event.inputs.email }}
-        
+           IFS=',' read -ra WORDS_TO_REPLACE <<< "${{ inputs.wordsToReplace }}"
+           for word in "${WORDS_TO_REPLACE[@]}"; do
+             sed -i "s/\<${word}\>/${{ inputs.newWord }}/g" "${{ inputs.file }}"
+           done
+          
+          git config --global user.email ${{inputs.email}}
+          git config --global user.name ${{inputs.username}}
+          git add .
+          git commit -m "Replace ${{ inputs.wordToReplace }} with ${{ inputs.newWord }} in ${{ inputs.file }}"
+          git push
