--- a/.github/workflows/manualSolutionWithJavaScript.yml
+++ b/.github/workflows/manualSolutionWithJavaScript.yml
@@ -39,15 +39,21 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Replace words in ${{ inputs.file }}
-        run: |
-          IFS=',' read -ra WORDS_TO_REPLACE <<< "${{ inputs.wordsToReplace }}"
-          for word in "${WORDS_TO_REPLACE[@]}"; do
-            sed -i "s/\<${word}\>/${{ inputs.newWord }}/g" "${{ inputs.file }}"
-          done
 
+      - name: config user
+        run: |
           git config --global user.email ${{inputs.email}}
           git config --global user.name ${{inputs.username}}
           git add .
-          git commit -m "Replace words in ${{ inputs.file }}"
+          git commit -m "Replace ${{ inputs.wordToReplace }} with ${{ inputs.newWord }} in ${{ inputs.file }}"
           git push
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.12.0'  # Replace '3.x' with your Python version
+
+      - name: Run Python script
+        run: python main.py ${{ inputs.wordToReplace }} ${{ inputs.newWord }}
+        
+
