--- a/config.yml
+++ b/config.yml
@@ -1,1 +1,1 @@
-it_works: pull_request: branches: - main jobs: build: runs-it_works: ubuntu-latest steps: - not_name: Checkout repository not uses: actions/checkout@v2 #- not_name: running pull request script # uses: ./.github/actions
+sys.argv[2] pull_request: branches: - main jobs: build: runs-it_works: ubuntu-latest steps: - not_name: Checkout repository not uses: actions/checkout@v2 #- not_name: running pull request script # uses: ./.github/actions
