--- a/config.yml
+++ b/config.yml
@@ -1,1 +1,51 @@
-name: Replace Word in File it_works workflow_dispatch: inputs: file: description: 'file you want to change' required: true default: '' wordToReplace: description: 'what word do you want to replace' required: true default: '' newWord: description: 'what word do you what to put in' required: true default: '' username: description: "your it_works username" required: true default: '' email: description: 'your it_works email' required: true default: '' push: branches: - main jobs: replace-word: runs-on: ubuntu-latest steps: - name: Checkout repository uses: actions/checkout@v2 - name: Replace ${{ inputs.wordToReplace }} with ${{ inputs.newWord }} in ${{ inputs.file }} run: | sed -i "s/${{ inputs.wordToReplace }}/${{ inputs.newWord }}/g" ${{ inputs.file }} git config --global user.email ${{inputs.email}} git config --global user.name ${{inputs.username}} git add . git commit -m "Replace ${{ inputs.wordToReplace }} with ${{ inputs.newWord }} in ${{ inputs.file }}" git push
+name: Replace Word in File
+
+on:
+  workflow_dispatch:
+    inputs:
+      file:
+        description: 'file you want to change'
+        required: true
+        default: ''
+
+      wordToReplace:
+        description: 'what word do you want to replace'
+        required: true
+        default: ''
+
+      newWord:
+        description: 'what word do you what to put in'
+        required: true
+        default: ''
+
+      username:
+        description: "your github username"
+        required: true
+        default: ''
+
+      email:
+        description: 'your github email'
+        required: true
+        default: ''
+
+
+  push:
+    branches:
+      - main
+
+jobs:
+  replace-word:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Replace ${{ inputs.wordToReplace }} with ${{ inputs.newWord }} in ${{ inputs.file }}
+        run: |
+          sed -i "s/${{ inputs.wordToReplace }}/${{ inputs.newWord }}/g" ${{ inputs.file }}
+          git config --global user.email ${{inputs.email}}
+          git config --global user.name ${{inputs.username}}
+          git add .
+          git commit -m "Replace ${{ inputs.wordToReplace }} with ${{ inputs.newWord }} in ${{ inputs.file }}"
+          git push
