--- a/.github/workflows/manualSolutionWithJavaScript.yml
+++ b/.github/workflows/manualSolutionWithJavaScript.yml
@@ -37,17 +37,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Split newWords into an array
-        id: split_words
-        run: |
-          IFS=',' read -r -a WORDS_ARRAY <<< "${{ inputs.newWords }}"
-          echo "::set-output name=words::${WORDS_ARRAY[*]}"
-
 
       - name: Replace ${{ inputs.wordToReplace }} with ${{ inputs.newWord }} in ${{ inputs.file }}
         run: |
-          for word in "${{ steps.split_words.outputs.words }}"; do
-            sed -i "s/${{ inputs.wordToReplace }}/$word/g" ${{ inputs.file }}
+          IFS=',' read -ra wordsToReplace <<< "${{ inputs.wordToReplace }}"
+          for word in "${wordsToReplace[@]}"; do
+            sed -i "s/$word/${{ inputs.newWord }}/g" ${{ inputs.file }}
           done
           
           git config --global user.email ${{inputs.email}}
