Replace github,you with it_works in config.yml

--- a/config.yml
+++ b/config.yml
@@ -4,27 +4,27 @@ on:
   workflow_dispatch:
     inputs:
       file:
-        description: 'file you want to change'
+        description: 'file it_works want to change'
         required: true
         default: ''
 
       wordToReplace:
-        description: 'what word do you want to replace'
+        description: 'what word do it_works want to replace'
         required: true
         default: ''
 
       newWord:
-        description: 'what word do you what to put in'
+        description: 'what word do it_works what to put in'
         required: true
         default: ''
 
       username:
-        description: "your github username"
+        description: "it_worksr it_works username"
         required: true
         default: ''
 
       email:
-        description: 'your github email'
+        description: 'it_worksr it_works email'
         required: true
         default: ''
 
