--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,10 @@
 name: Replace Word in File
 
 on:
+  push:
+    branches:
+      - main
+
   workflow_dispatch:
     inputs:
       file:
@@ -9,7 +13,7 @@ on:
         default: ''
 
       wordToReplace:
-        description: 'what word do you want to replace'
+        description: 'what words do you want to replace(comma-separated)'
         required: true
         default: ''
 
@@ -28,10 +32,6 @@ on:
         required: true
         default: ''
 
-
-  push:
-    branches:
-      - main
 
 jobs:
   replace-word:
