--- a/.github/workflows/automatedSolution.yml
+++ b/.github/workflows/automatedSolution.yml
@@ -48,11 +48,12 @@ jobs:
           echo "::set-output name=file::$FILE"
           echo "::set-output name=old_word::$OLD_WORD"
           echo "::set-output name=new_word::$NEW_WORD"
+          echo "::set-output name=replace::REPLACE"
 
       - name: Replace ${{ steps.extract_info.outputs.old_word }} with ${{ steps.extract_info.outputs.new_word }} in ${{ steps.extract_info.outputs.file }}
         run: |
           
-          if [[ "${{ steps.extract_info.outputs.new_word }}" == "replace" ]]; then
+          if [[ "${{ steps.extract_info.outputs.replace }}" == "replace" ]]; then
             sed -i "s/${{ steps.extract_info.outputs.old_word }}/${{ steps.extract_info.outputs.new_word }}/g" ${{ steps.extract_info.outputs.file }}
             git add .
             git commit -m "Replace ${{ steps.extract_info.outputs.old_word }} with ${{ steps.extract_info.outputs.new_word }} in ${{ steps.extract_info.outputs.file }}"
