--- a/.github/workflows/automatedSolution.yml
+++ b/.github/workflows/automatedSolution.yml
@@ -55,6 +55,10 @@ jobs:
           
           if [[ "${{ steps.extract_info.outputs.replace }}" == "replace" ]]; then
             sed -i "s/${{ steps.extract_info.outputs.old_word }}/${{ steps.extract_info.outputs.new_word }}/g" ${{ steps.extract_info.outputs.file }}
+          
+            git config --global user.email "fogadm06@gmail.com"
+            git config --global user.name "FogadOg"
+          
             git add .
             git commit -m "Replace ${{ steps.extract_info.outputs.old_word }} with ${{ steps.extract_info.outputs.new_word }} in ${{ steps.extract_info.outputs.file }}"
             git push
