--- a/.github/workflows/automatedSolution.yml
+++ b/.github/workflows/automatedSolution.yml
@@ -63,5 +63,5 @@ jobs:
             git commit -m "Replace ${{ steps.extract_info.outputs.old_word }} with ${{ steps.extract_info.outputs.new_word }} in ${{ steps.extract_info.outputs.file }}"
             git push
           else
-            echo "Skipping the replacement"
+            echo "Skipping the replacement."
           fi
