--- a/.github/workflows/automatedSolution.yml
+++ b/.github/workflows/automatedSolution.yml
@@ -56,10 +56,15 @@ jobs:
           if [[ "${{ steps.extract_info.outputs.replace }}" == "replace" ]]; then
           
           
-          IFS=',' read -ra wordsToReplace <<< "${{ inputs.wordToReplace }}"
-          for word in "${{ steps.extract_info.outputs.old_word[@] }"; do
-            sed -i "s/$word/${{ steps.extract_info.outputs.new_word }}/g" ${{ steps.extract_info.outputs.file }}
-          done
+            #sed -i "s/${{ steps.extract_info.outputs.old_word }}/${{ steps.extract_info.outputs.new_word }}/g" ${{ steps.extract_info.outputs.file }}
+          
+          
+            IFS=',' read -ra OLD_WORDS <<< "new_word"
+    
+            for OLD_WORD in "${old_word[@]}"; do
+            # Perform the replacement
+            sed -i "s/$OLD_WORD/$NEW_WORD/g" ${{ steps.extract_info.outputs.file }}
+            done
           
             git config --global user.email "fogadm06@gmail.com"
             git config --global user.name "FogadOg"
