--- a/.github/workflows/automatedSolution.yml
+++ b/.github/workflows/automatedSolution.yml
@@ -53,14 +53,9 @@ jobs:
           if [[ "${{ steps.extract_info.outputs.replace }}" == "replace" ]]; then
           
           
-            #sed -i "s/${{ steps.extract_info.outputs.old_word }}/${{ steps.extract_info.outputs.new_word }}/g" ${{ steps.extract_info.outputs.file }}
+            sed -i "s/${{ steps.extract_info.outputs.old_word }}/${{ steps.extract_info.outputs.new_word }}/g" ${{ steps.extract_info.outputs.file }}
           
-          
-            for OLD_WORD in "${OLD_WORDS[@]}"; do
-              NEW_WORD="${{ steps.extract_info.outputs.new_word }}"  # Assuming you have extracted the new word similarly
-  
-              sed -i "s/$OLD_WORD/$NEW_WORD/g" ${{ steps.extract_info.outputs.file }}
-            done
+        
           
             git config --global user.email "fogadm06@gmail.com"
             git config --global user.name "FogadOg"
