--- a/.github/workflows/automatedSolution.yml
+++ b/.github/workflows/automatedSolution.yml
@@ -49,14 +49,11 @@ jobs:
         if: ${{ steps.extract_info.outputs.replace == 'replace' }}
         run: |
           FILE_PATH="${{ steps.extract_info.outputs.file }}"
+          OLD_WORD=${{ steps.extract_info.outputs.old_word }}
+          NEW_WORD=${{ steps.extract_info.outputs.new_word }}
 
-          IFS=',' read -ra ${{ steps.extract_info.outputs.old_words }} <<< "$OLD_WORDS"  # Split words by comma
+          sed -i "s/OLD_WORD/NEW_WORD/g" FILE_PATH
 
-          for OLD_WORD in "${OLD_WORDS[@]}"; do
-            NEW_WORD="${{ steps.extract_info.outputs.new_word }}"  # Assuming you have extracted the new word similarly
-
-            sed -i "s/$OLD_WORD/${{ steps.extract_info.outputs.new_word }}/g" "$FILE_PATH"
-          done
 
           git config --global user.email "fogadm06@gmail.com"
           git config --global user.name "FogadOg"
