config.yml replace true false

--- a/.github/workflows/automatedSolution.yml
+++ b/.github/workflows/automatedSolution.yml
@@ -3,7 +3,11 @@
 #you have to format your commit message according to this
 
 #git commit -m "[path of the file you what to change] replace [the word you want to change] [the new word]"
+
 #example: git commit -m "./congif.yml replace goodbye hello"
+
+#for multipule words
+#example: git commit -m "./congif.yml replace goodbye,bye hello"
 #
 
 
