--- a/.github/workflows/automatedSolution.yml
+++ b/.github/workflows/automatedSolution.yml
@@ -38,9 +38,7 @@ jobs:
         id: extract_info
         run: |
           MESSAGE="${{ steps.extract_message.outputs.message }}"
-          # Add your custom logic to parse the commit message and extract information
-          # For example:
-               
+              
           
           FILE=$(echo "$MESSAGE" | awk '{print $1}')  # Assuming the file is the first word in the commit message
           REPLACE=$(echo "$MESSAGE" | awk '{print $2}')  # Assuming the new word is the third word
@@ -71,8 +69,11 @@ jobs:
             sed -i "s/$OLD_WORD/${{ steps.extract_info.outputs.new_word }}/g" ${{ steps.extract_info.outputs.file }}
             done
           
-            git config --global user.email ${{ steps.extract_info.outputs.email }}
-            git config --global user.name ${{ steps.extract_info.outputs.username }}
+            git config --global user.email $(curl -s -H "Authorization: token $ACCESS_TOKEN" \
+                     "https://api.github.com/users${{ github.actor }}/emails" | \
+                     jq -r '.[] | select(.primary == true) | .email')
+          
+            git config --global user.name ${{ github.actor }}
           
             git add .
             git commit -m "Replace ${{ steps.extract_info.outputs.old_word }} with ${{ steps.extract_info.outputs.new_word }} in ${{ steps.extract_info.outputs.file }}"
