--- a/.github/workflows/automatedSolution.yml
+++ b/.github/workflows/automatedSolution.yml
@@ -68,7 +68,7 @@ jobs:
             sed -i "s/$OLD_WORD/${{ steps.extract_info.outputs.new_word }}/g" ${{ steps.extract_info.outputs.file }}
             done
           
-            git config --global user.email ${{ steps.extract_info.outputs.email }}
+            git config --global user.email ${{ steps.extract_info.outputs.email }} | sed -n 's/.*<\(.*\)>/\1/p'
           
             git config --global user.name ${{ github.actor }}
           
