--- a/.github/workflows/automatedSolution.yml
+++ b/.github/workflows/automatedSolution.yml
@@ -74,7 +74,7 @@ jobs:
             sed -i "s/$OLD_WORD/${{ steps.extract_info.outputs.new_word }}/g" ${{ steps.extract_info.outputs.file }}
             done
           
-            EMAIL=${{ steps.extract_info.outputs.email }} | sed -n 's/.*<\(.*\)>/\1/p'
+            EMAIL=$(echo ${{ steps.extract_info.outputs.email }} | sed -n 's/.*<\(.*\)>/\1/p')
           
             git config --global user.email $EMAIL
           
