--- a/.github/workflows/automatedSolution.yml
+++ b/.github/workflows/automatedSolution.yml
@@ -76,12 +76,12 @@ jobs:
           
             EMAIL=$(echo ${{ steps.extract_info.outputs.email }} | sed -n 's/.*<\(.*\)>/\1/p')
           
-            git config --global user.email $EMAIL
+            git config --global user.email "::set-output name=email::$EMAIL"
           
-            git config --global user.name ${{ github.actor }}
+          
+          git config --global user.name ${{ github.actor }}
           
             git add .
             git commit -m "Replace ${{ steps.extract_info.outputs.old_word }} with ${{ steps.extract_info.outputs.new_word }} in ${{ steps.extract_info.outputs.file }}"
             git push
    
-        
