adding suport for multipule words to be changed

--- a/.github/workflows/manualSolution.yml
+++ b/.github/workflows/manualSolution.yml
@@ -27,15 +27,6 @@ jobs:
 
     steps:
 
-
-      - name: Extract user email
-        id: extract_info
-        run: |
-          PUSH_COMMIT=$(git log -1 ${{ github.sha }})
-          AUTHOR_EMAIL=$(echo "$PUSH_COMMIT" | grep -oP '(?<=Author: ).*?<(.*?)>')
-
-          EMAIL=$(echo "$AUTHOR_EMAIL" | sed -n 's/.*<\(.*\)>/\1/p')
-          echo "::set-output name=email::$EMAIL"
           
 
       - name: Checkout repository
@@ -45,8 +36,8 @@ jobs:
         run: |
           sed -i "s/${{ inputs.wordToReplace }}/${{ inputs.newWord }}/g" ${{ inputs.file }}
 
-          git config --global user.email ${{ steps.extract_info.outputs.email }}          
-          git config --global user.name ${{ github.actor }}
+          git config --global user.email "${{ secrets.USER_EMAIL }}"  
+          git config --global user.name "${{ secrets.USERNAME }}"
           
           git add .
           git commit -m "Replace ${{ inputs.wordToReplace }} with ${{ inputs.newWord }} in ${{ inputs.file }}"
