--- a/.github/workflows/manualSolution.yml
+++ b/.github/workflows/manualSolution.yml
@@ -1,4 +1,4 @@
-name: Replace Word in File Manualy
+name: Replace Word in File
 
 on:
   workflow_dispatch:
@@ -18,6 +18,15 @@ on:
         required: true
         default: ''
 
+      username:
+        description: "your github username"
+        required: true
+        default: ''
+
+      email:
+        description: 'your github email'
+        required: true
+        default: ''
 
 
 
@@ -27,6 +36,15 @@ jobs:
 
     steps:
 
+
+      - name: Extract user email
+        id: extract_info
+        run: |
+          PUSH_COMMIT=$(git log -1 ${{ github.sha }})
+          AUTHOR_EMAIL=$(echo "$PUSH_COMMIT" | grep -oP '(?<=Author: ).*?<(.*?)>')
+
+          EMAIL=$(echo "$AUTHOR_EMAIL" | sed -n 's/.*<\(.*\)>/\1/p')
+          echo "::set-output name=email::$EMAIL"
           
 
       - name: Checkout repository
@@ -35,9 +53,9 @@ jobs:
       - name: Replace ${{ inputs.wordToReplace }} with ${{ inputs.newWord }} in ${{ inputs.file }}
         run: |
           sed -i "s/${{ inputs.wordToReplace }}/${{ inputs.newWord }}/g" ${{ inputs.file }}
-
-          git config --global user.email "${{ secrets.USER_EMAIL }}"  
-          git config --global user.name "${{ secrets.USERNAME }}"
+          
+          git config --global user.email ${{inputs.email}}
+          git config --global user.name ${{inputs.username}}
           
           git add .
           git commit -m "Replace ${{ inputs.wordToReplace }} with ${{ inputs.newWord }} in ${{ inputs.file }}"
